--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -3,57 +3,77 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/dropmenu.css" />
-<link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css">    
-<script src="./js/bikes.js"></script>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
-<title>Your Cart</title>
-<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
+<link rel="stylesheet" href="site.css">
+<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="greenville.css">
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<title>My Cart | Greenville Enterprise Software</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-    .highlight {
-      background-color: #e0f3ff !important;
-    }
-    .selected {
-      border: 2px solid #198754;
-    }
-    .park-logo {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
-      margin-right: 8px;
-      vertical-align: middle;
-    }
-  
-#userGreeting
-{
-  display: flex;
-  justify-content: center;     /* horizontal centering */
-  align-items: center;         /* vertical centering */
-  color: white;
-  text-align: center;
+/* HERO BANNER */
+.hero {
+    background: #0a2f1f;
+    color: white;
+    padding: 60px 20px;
+    text-align: center;
 }
-#banner
-{
-background-color: lightgrey;
-height: 60px;
-vertical-align: middle;
-width: 100%;
-display: flex;
-justify-content: center;     /* horizontal centering */
-align-items: center;         /* vertical centering */
+
+/* CART CARD HIGHLIGHT */
+.highlight {
+    background-color: #e0f3ff !important;
 }
-  
-#cancelBtn
-{
-width: 400px;
+
+.selected {
+    border: 2px solid #198754;
+}
+
+.park-logo {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+    margin-right: 8px;
+}
+
+/* THREE-COLUMN FOOTER SECTION */
+.welcome-columns {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    width: 85%;
+    margin: 40px auto;
+}
+
+.welcome-card {
+    flex: 1;
+    background: #ffffff;
+    border: 1px solid #d1e7d9;
+    border-radius: 6px;
+    padding: 25px;
+}
+
+.welcome-images img {
+    width: 48%;
+    border-radius: 5px;
+}
+
+.sitemap-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.sitemap-table th,
+.sitemap-table td {
+    padding: 8px;
+    border-bottom: 1px solid #d1e7d9;
+    text-align: left;
 }
 </style>
 </head>
+
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
-<div class="gacontainer">
+
+<!-- NAV -->
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -77,18 +97,69 @@ width: 400px;
     </div>
 </div>
 
+<!-- HEADER -->
 <header>
     <h1>Greenville Enterprise Software</h1>
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
-</header>  
-   
-  <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
-  <div class="container py-5">
-      <div id="cart-items" class="row g-4 mb-4"></div>
+</header>
+
+<!-- HERO -->
+<section class="hero">
+    <h2>Your Cart</h2>
+    <p>Review your selected licenses and proceed to checkout.</p>
+</section>
+
+<!-- CART CONTENT -->
+<div class="container py-5">
+    <div id="cart-items" class="row g-4 mb-4"></div>
+
     <div class="text-center">
-      <button id="checkout-btn" class="btn btn-primary btn-lg w-100">Checkout</button>
+        <button id="checkout-btn" class="btn btn-primary btn-lg w-100">Checkout</button>
     </div>
-  </div>
+</div>
+
+<!-- FOOTER 3-COLUMN SECTION -->
+<section class="welcome-columns">
+
+    <div class="welcome-card welcome-images">
+        <img src="./images/miami1.jpg">
+        <img src="./images/miami3.jpg">
+    </div>
+
+    <div class="welcome-card">
+        <h3>Quick Links</h3>
+        <hr>
+        <ul class="quick-links">
+            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
+            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
+            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
+            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
+            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
+        </ul>
+    </div>
+
+    <div class="welcome-card">
+        <h3>Site Map</h3>
+        <hr>
+        <table class="sitemap-table">
+            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+            <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
+            <tr><td>Usage</td><td><a href="mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
+            <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
+            <tr><td>Cart</td><td><a href="mycart.html">MyCart</a></td><td>01/15/2026</td></tr>
+            <tr><td>TypeReviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
+        </table>
+    </div>
+
+</section>
+
+<!-- FOOTER -->
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
+
+
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
