--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -33,36 +33,33 @@
         </div>
     </div>
 
-    <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
+   <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
 
-  <md-text-button href="index.html" aria-label="Home" title="Home">
+  <md-text-button class="icon-only" href="index.html" aria-label="Home" title="Home">
     <span class="material-icons" style="color:white;">home</span>
   </md-text-button>
 
-  <md-text-button href="userhelp.html" aria-label="Help" title="Help">
+  <md-text-button class="icon-only" href="userhelp.html" aria-label="Help" title="Help">
     <span class="material-icons" style="color:white;">help_outline</span>
   </md-text-button>
 
-  <md-text-button href="usernotices.html" aria-label="Notifications" title="Notifications">
+  <md-text-button class="icon-only" href="usernotices.html" aria-label="Notifications" title="Notifications">
     <span class="material-icons" style="color:white;">notifications</span>
   </md-text-button>
 
-  <md-text-button href="login.html" aria-label="Login" title="Login">
+  <md-text-button class="icon-only" href="login.html" aria-label="Login" title="Login">
     <span class="material-icons" style="color:white;">login</span>
   </md-text-button>
 
-  <md-text-button href="logout.html" aria-label="Logout" title="Logout">
+  <md-text-button class="icon-only" href="logout.html" aria-label="Logout" title="Logout">
     <span class="material-icons" style="color:white;">logout</span>
   </md-text-button>
 
-  <!-- New: User Profile -->
-  <md-text-button href="myprofile.html" aria-label="My Profile" title="My Profile">
-<!-- You can use 'account_circle' if you like that look better -->
+   <md-text-button class="icon-only" href="myprofile.html" aria-label="My Profile" title="My Profile">
     <span class="material-icons" style="color:white;">person</span>
   </md-text-button>
 
-  <!-- New: Cart Review -->
-  <md-text-button href="mycart.html" aria-label="My Cart" title="My Cart">
+   <md-text-button class="icon-only" href="mycart.html" aria-label="My Cart" title="My Cart">
     <span class="material-icons" style="color:white;">shopping_cart</span>
   </md-text-button>
 </div>
