--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -21,7 +21,8 @@
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="login.html">Login</a>
+			<a href="index.html">Home</a>
+			<a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
             <a href="licenses6.html">BuyNow</a>
@@ -554,6 +555,7 @@
 </div>
 </body>
 </html>
+
 
 
 
