--- a/project/homepage/myprofile.html
+++ b/project/homepage/myprofile.html
@@ -99,7 +99,8 @@
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="login.html">Login</a>
+            <a href="index.html">Home</a>
+			<a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
             <a href="licenses6.html">BuyNow</a>
@@ -112,9 +113,9 @@
             <a href="testimonials.html">AdminTestimonials</a>
             <a href="products.html">AdminProducts</a>
             <a href="licensetypes.html">AdminLicenseTypes</a>
-	   <a href="template.html">AdminPageTemplate</a>
+	   		<a href="template.html">AdminPageTemplate</a>
         </div>
-    </div>
+       </div>
 <div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
 
   <md-text-button class="icon-only" href="index.html" aria-label="Home" title="Home">
