--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -69,13 +69,6 @@
   </md-text-button>
 </div>
     
-    <!--<div class="right-links">
-        <a href="index.html">Home</a>
-        <a href="userhelp.html">UserHelp</a>
-        <a href="usernotices.html">UserNotices</a>
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
-    </div>-->
 </div>
 <header>
     <h1>Greenville Enterprise Software</h1>
@@ -129,7 +122,7 @@
 
     <!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
-        <h2>@CurrentReleases</h2>
+        <h4>Fusion Releases</h4>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
@@ -153,52 +146,54 @@
         </div>
     </div>
 
-
+<BR><BR>
     <!-- FEATURES SECTION -->
     <div id="features" class="features">
-        <h2>Explore</h2>
+        <h4>Explore</h4>
 
         <div class="feature-grid">
 
             <a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
                 <h3 style="text-align: center;">FusionBasics</h3>
-                <p>Real‑time insights and reporting tools.</p>
+                <p>Review Containerized Application Types, Site Licenses, Extranet, Intranet Portal Technologies.</p>
             </a>
 
             <a href="feature2.html" class="feature-card">
                 <img src="./images/image2.png" width="50px" height="50px" alt="Feature Icon">
                 <h3 style="text-align: center;">Deployment Options</h3>
-                <p>Secure authentication and access control.</p>
+                <p>Review Premise, ILEC, Cloud, Grid and Hybrid Deployment Options.</p>
             </a>
 
             <a href="feature3.html" class="feature-card">
                 <img src="./images/image3.png" width="50px" height="50px" alt="Feature Icon">
                 <h3 style="text-align: center;">LicenseTypes</h3>
-                <p>Streamline workflows across your enterprise.</p>
+                <p>Review License Types, Trial Delivery and Service Options.</p>
             </a>
 
             <a href="feature4.html" class="feature-card">
                 <img src="./images/image4.png" width="50px" height="50px" alt="Feature Icon">
                 <h3 style="text-align: center;">Pricing Wizard</h3>
-                <p>Manage and secure your enterprise APIs.</p>
+                <p>Develop Pricing for Utility Usage, Site Licenses, and Cloud/Hybrid Options.</p>
             </a>
 		</div>
         </div>
-			<!-- SECOND FEATURES SECTION -->
-    <div id="features" class="features">
-        <h2>Manage</h2>
+		<BR><BR>
+		
+		<!-- SECOND FEATURES SECTION -->
+    	<div id="features" class="features">
+        <h4>Manage</h4>
 		<div class="feature-grid">
     
 				<a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
                 <h3 style="text-align: center;">MyLicenses</h3>
-                <p>Manage and secure your licenses, and monitor real time stats.</p>
+                <p>Manage and secure your personal licenses, and monitor real time stats.</p>
             </a>
 				<a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
                 <h3 style="text-align: center;">CorporateLicenses</h3>
-                <p>Manage and secure your enterprise Licenses across the world.</p>
+                <p>Manage and Monitor your Enterprise Licenses across the world.</p>
             </a>
 			
         </div>
@@ -555,6 +550,7 @@
 </div>
 </body>
 </html>
+
 
 
 
