--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -122,7 +122,7 @@
 
     <!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
-        <h4>Fusion Releases</h4>
+        <h4>Fusion Releases</h4><BR>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
@@ -149,31 +149,31 @@
 <BR><BR>
     <!-- FEATURES SECTION -->
     <div id="features" class="features">
-        <h4>Explore</h4>
+        <h4>Explore</h4><BR>
 
         <div class="feature-grid">
 
             <a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">FusionBasics</h3>
+                <h5 style="text-align: center;">FusionBasics</h5>
                 <p>Review Containerized Application Types, Site Licenses, Extranet, Intranet Portal Technologies.</p>
             </a>
 
             <a href="feature2.html" class="feature-card">
                 <img src="./images/image2.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">Deployment Options</h3>
+                <h5 style="text-align: center;">Deployment Options</h5>
                 <p>Review Premise, ILEC, Cloud, Grid and Hybrid Deployment Options.</p>
             </a>
 
             <a href="feature3.html" class="feature-card">
                 <img src="./images/image3.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">LicenseTypes</h3>
+                <h5 style="text-align: center;">LicenseTypes</h5>
                 <p>Review License Types, Trial Delivery and Service Options.</p>
             </a>
 
             <a href="feature4.html" class="feature-card">
                 <img src="./images/image4.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">Pricing Wizard</h3>
+                <h5 style="text-align: center;">Pricing Wizard</h5>
                 <p>Develop Pricing for Utility Usage, Site Licenses, and Cloud/Hybrid Options.</p>
             </a>
 		</div>
@@ -182,17 +182,17 @@
 		
 		<!-- SECOND FEATURES SECTION -->
     	<div id="features" class="features">
-        <h4>Manage</h4>
+        <h4>Manage</h4><BR>
 		<div class="feature-grid">
     
 				<a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">MyLicenses</h3>
+                <h5 style="text-align: center;">MyLicenses</h5>
                 <p>Manage and secure your personal licenses, and monitor real time stats.</p>
             </a>
 				<a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
-                <h3 style="text-align: center;">CorporateLicenses</h3>
+                <h5 style="text-align: center;">CorporateLicenses</h5>
                 <p>Manage and Monitor your Enterprise Licenses across the world.</p>
             </a>
 			
@@ -550,6 +550,7 @@
 </div>
 </body>
 </html>
+
 
 
 
